--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,13 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">EMS</a>
-    <a class="navbar-brand" routerLink="register" href="#">Register</a>
+  <a class="navbar-brand" routerLink="register" href="#">Register</a>
     <a class="navbar-brand" routerLink="login" href="#">Login</a>
-    
+    <a class="navbar-brand" routerLink="add-employye" href="#">EMS</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   </nav>
   <router-outlet>  
   </router-outlet>
-<app-add-employee></app-add-employee>
+<!-- <app-add-employee></app-add-employee> -->
